docs : 정적컨텐츠 정리

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -21,4 +21,36 @@
 > 정적컨텐츠 : html파일 자체를 그대로 웹브라우저에 전달해주는 방식
 
 Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
-[Link](https://docs.spring.io/spring-boot/docs/2.3.1.RELEASE/reference/html/spring-boot- features.html#boot-features-spring-mvc-static-content)
+
+제공 주소 : [Link](https://docs.spring.io/spring-boot/docs/2.3.1.RELEASE/reference/html/spring-boot-features.html#boot-features-spring-mvc-static-content)
+
+</br>
+
+내가 보여주고 싶은 화면을 아래의 위치에 hello-static이라는 이름으로 만들었다.
+- resources/static/hello-static.html
+```html
+  <!DOCTYPE HTML>
+  <html>
+  <head>
+      <title>static content</title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  </head>
+<body>
+정적 컨텐츠 입니다.
+  </body>
+  </html>
+```
+
+</br>
+
+현재 서버 포트가 8080이므로, localhost:8080/hello-static.html을 브라우저에서 요청한다.
+
+- 실행 결과
+<img width="510" alt="스크린샷 2023-11-17 21 48 30" src="https://github.com/hamsangjin/TIL/assets/103736614/aff7b8cc-11e0-4e78-9b53-92620a3a41d6">
+
+</br>
+</br>
+
+그러면, 위와 같이 생성한 html파일을 볼 수 있다.</br>
+이렇게 정적컨텐츠는 resources/static폴더에서 요청한 html파일을 가져와 브라우저에 보여준다.</br>
+그래서 html파일화면만 볼 수 있다는 단점이 존재한다.</br>
