--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -45,8 +45,8 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 현재 서버 포트가 8080이므로, localhost:8080/hello-static.html을 브라우저에서 요청한다.
 
-- 실행 결과
-<img width="510" alt="스크린샷 2023-11-17 21 48 30" src="https://github.com/hamsangjin/TIL/assets/103736614/aff7b8cc-11e0-4e78-9b53-92620a3a41d6">
+- 실행 결과(http://localhost:8080/hello-static.html)
+<img width="386" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/9fbf19c6-5710-4c84-8acb-c0222e19d5d3">
 
 </br>
 </br>
@@ -54,3 +54,85 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 그러면, 위와 같이 생성한 html파일을 볼 수 있다.</br>
 이렇게 정적컨텐츠는 resources/static폴더에서 요청한 html파일을 가져와 브라우저에 보여준다.</br>
 그래서 html파일화면만 볼 수 있다는 단점이 존재한다.</br>
+
+
+- 동작 원리
+
+<img width="539" alt="정적 컨텐츠 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/94bba31b-f1b8-45ec-a904-f125f04068b3">
+
+웹브라우저에서 내장톰캣서버에게 localhost:8080/hello-static.html 요청을 하면 내장톰캣서버가 스프링 컨테이너에게 전달해준다. </br>
+그러면 먼저 스프링 컨테이너가 우선순위를 가지고있는 컨트롤러에서 hello-static이 있는지 확인한다. </br>
+확인해보고 지금과 같이hello-static과 맵핑이 되어있는 컨트롤러를 찾지 못하면 resources/static에서 hello-static.html 파일이 있는지 확인한 후, 웹 브라우저에 전달해준다.
+
+</br>
+</br>
+</br>
+
+## MVC와 템플릿 엔진
+
+> MVC : Model, View, Controller의 약자이며, 하나의 애플리케이션이나 프로젝트를 구성할 때 그 구성요소를 세 가지의 역할로 구분한 패턴이다.
+
+1. Model : 애플리케이션의 정보, 데이터를 나타내며, 데이터베이스, 처음에 정의하는 상수, 초기화 값, 변수 등을 뜻한다.
+2. View : 입력 텍스트, 체크박스 항목 등과 같은 사용자 인터페이스 요소를 나타낸다.
+3. Controller : 사용자가 데이터를 클릭하고, 수정하는 것에 대한 이벤트들을 처리하는 부분을 뜻한다.
+
+</br>
+
+여기서의 Controller와 View 파일은 아래와 같다.
+
+- java/hello.hellospring/controller/HelloController.java
+
+```java
+  @Controller
+  public class HelloController {
+      @GetMapping("hello-mvc")
+      public String helloMvc(@RequestParam("name") String name, Model model) {
+          model.addAttribute("name", name);
+          return "hello-template";
+      }
+}
+```
+
+- resources/templates/hello-template.html
+```html
+  <html xmlns:th="http://www.thymeleaf.org">
+  <body>
+  <p th:text="'hello ' + ${name}">hello! empty</p>
+  </body>
+```
+
+</br>
+
+- 실행결과(http://localhost:8080/hello-mvc?name=spring)
+<img width="419" alt="스크린샷 2023-11-17 22 14 58" src="https://github.com/hamsangjin/TIL/assets/103736614/f7fe4e82-851b-4214-bb1d-2feec503872a">
+
+</br>
+
+- `@GetMapping("hello-mvc")` : GET방식이며, "hello-mvc"로 호출하는 것으로 정의해놓은 것이다.
+- `@RequestParam(value="",required="")` : 호출할 때 파라미터를 정의한 것이다. 코드를 보면 @RequestParam("name") String name으로 되어있다. 즉, 파라미터를 name이라는 key로 String 데이터를 받겠다라는 의미다. 그래서 실행하는 url을 보면 name=spring으로 호출하고, 데이터 처리를 할 때는 spring이라는 데이터가 들어와 동작하게되는 것이다.
+  - `required`의 **default는 true**, 파라미터가 필수가되어야하는 의미이기 때문에 false를 넣어주면 있어도 없어도 동작할 수 있다.
+- `<p th:text="'hello ' + ${name}">hello! empty</p>` : **템플릿 엔진**을 사용해 name이라는 데이터(spirng)가 넘어왔을 때 `hello spring`이 보여지고 만약 데이터가 없다면 그냥 `hello!`가 보여진다.
+
+</br>
+
+- 동작 원리
+<img width="549" alt="스크린샷 2023-11-17 22 21 34" src="https://github.com/hamsangjin/TIL/assets/103736614/dbddb61c-8508-448d-82f4-4612b976fd7f">
+
+1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
+
+2. 내장톰캣서버에 요청 후 스프링컨테이너에 전달한다.
+
+3. 스프링 컨테이너에서는 HelloController에 맵핑되어있는 것을 확인하고 hello-template에 모델을 리턴
+
+4. ViewResolver가 리턴한 hello-template을 찾아서 템플린엔진에게 처리해달라고 요청한다.
+  - **ViewResolver**는 화면을 찾아주고, 템플릿엔진을 연결시켜주는 역할
+
+5. 템플릿 엔진은 동적으로 넘어온 데이터를 치환하여 변경하고, html로 변환하여 전달한다.
+
+<!--
+</br>
+</br>
+</br>
+
+## API
+-->
