docs : 사진 재업로드

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -46,7 +46,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 현재 서버 포트가 8080이므로, localhost:8080/hello-static.html을 브라우저에서 요청한다.
 
 - 실행 결과(http://localhost:8080/hello-static.html)
-<img width="386" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/9fbf19c6-5710-4c84-8acb-c0222e19d5d3">
+<img width="399" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/6e05964f-73cb-4adb-8694-e2a623343405">
 
 </br>
 </br>
@@ -57,8 +57,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 
 - 동작 원리
-
-<img width="539" alt="정적 컨텐츠 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/94bba31b-f1b8-45ec-a904-f125f04068b3">
+<img width="549" alt="정적 컨텐츠 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/56f34cda-7d34-49c7-89be-2f86aa5183c2">
 
 웹브라우저에서 내장톰캣서버에게 localhost:8080/hello-static.html 요청을 하면 내장톰캣서버가 스프링 컨테이너에게 전달해준다. </br>
 그러면 먼저 스프링 컨테이너가 우선순위를 가지고있는 컨트롤러에서 hello-static이 있는지 확인한다. </br>
@@ -104,7 +103,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 </br>
 
 - 실행결과(http://localhost:8080/hello-mvc?name=spring)
-<img width="419" alt="스크린샷 2023-11-17 22 14 58" src="https://github.com/hamsangjin/TIL/assets/103736614/f7fe4e82-851b-4214-bb1d-2feec503872a">
+<img width="386" alt="MVC 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/68b835ca-1e19-472d-b7c4-b2f0d4769b49">
 
 </br>
 
@@ -116,9 +115,10 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 </br>
 
 - 동작 원리
-<img width="549" alt="스크린샷 2023-11-17 22 21 34" src="https://github.com/hamsangjin/TIL/assets/103736614/dbddb61c-8508-448d-82f4-4612b976fd7f">
+<img width="543" alt="MVC 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/c16a7d0c-694b-446e-b8fd-db1875fc73bf">
 
-1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
+1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러
+를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
 
 2. 내장톰캣서버에 요청 후 스프링컨테이너에 전달한다.
 
