--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -129,10 +129,20 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 5. 템플릿 엔진은 동적으로 넘어온 데이터를 치환하여 변경하고, html로 변환하여 전달한다.
 
-<!--
+
 </br>
 </br>
 </br>
 
 ## API
--->
+
+> API(Application Programming Interface) : 정의 및 프로토콜 집합을 사용하여 두 소프트웨어 구성 요소가 서로 통신할 수 있게 하는 메커니즘
+
+
+
+
+
+
+
+
+
