docs : api part

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -45,7 +45,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 현재 서버 포트가 8080이므로, localhost:8080/hello-static.html을 브라우저에서 요청한다.
 
-- 실행 결과(http://localhost:8080/hello-static.html)
+- `실행 결과(http://localhost:8080/hello-static.html)`
 <img width="399" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/6e05964f-73cb-4adb-8694-e2a623343405">
 
 </br>
@@ -102,7 +102,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 </br>
 
-- 실행결과(http://localhost:8080/hello-mvc?name=spring)
+- `실행결과(http://localhost:8080/hello-mvc?name=spring)`
 <img width="386" alt="MVC 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/68b835ca-1e19-472d-b7c4-b2f0d4769b49">
 
 </br>
@@ -138,11 +138,78 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 > API(Application Programming Interface) : 정의 및 프로토콜 집합을 사용하여 두 소프트웨어 구성 요소가 서로 통신할 수 있게 하는 메커니즘
 
+이번엔 컨트롤러에 `@ResponseBody`를 이용해 문자를 반환해보자.
 
+- java/hello.hellospring/controller/HelloController.java
 
+```java
+ @Controller
+  public class HelloController {
+      @GetMapping("hello-string")
+      @ResponseBody
+      public String helloString(@RequestParam("name") String name) {
+          return "hello " + name;
+      }
+  }
+```
 
+- `실행결과(http://localhost:8080/hello-string?name=spring!!!!!!!)`
+<img width="483" alt="스크린샷 2023-11-28 21 27 17" src="https://github.com/hamsangjin/TIL/assets/103736614/d6fc6a9d-c02a-4122-bf2b-e7de5d45d22e">
 
+- @ResponseBody : Http 통신 프로토콜엔 Header부와 Body부가 있는데, 그 중 Body부에 데이터`("hello " + name)`를 직접 넣어주겠다는 뜻이며, 템플린 엔진과는 다르게 viewResolver를 사용하지 않는다.
 
+- 이렇게 사용한다면 아래 사진과 같이 Http Body에 문자 내용을 직접 반환한다.
 
+- `ResponseBody의 Http Body`
+<img width="204" alt="스크린샷 2023-11-28 21 31 37" src="https://github.com/hamsangjin/TIL/assets/103736614/1f9c60af-ef72-44dd-8875-b8a2c055bbdb">
+
+- `기존 MVC의 Http Body`
+<img width="174" alt="스크린샷 2023-11-28 21 28 59" src="https://github.com/hamsangjin/TIL/assets/103736614/faf19076-5e85-4b9f-9000-446053f3f9d0">
+
+* 하지만 문자를 반환하는 방법을 쓸 일은 거의 없다.
+
+이제 @ResponseBody를 이용해 객체를 반환하는 방법을 사용해보자
+- java/hello.hellospring/controller/HelloController.java
+
+```java
+@Controller
+public class HelloController {
+    @GetMapping("hello-api")
+    @ResponseBody
+    public Hello helloApi(@RequestParam("name") String name) {
+        Hello hello = new Hello();
+        hello.setName(name);
+        return hello;
+    }
+    static class Hello {
+        private String name;
+        public String getName() {
+            return name;
+        }
+        public void setName(String name) {
+            this.name = name;
+        }
+    }
+}
+```
+
+- `Tip` :  Mac OS 기준으로 `cmd + n`을 누르면 generate가 나오는데 거기서 getter and setter를 선택하면 `getName()`과 `setName()` 함수를 입력할 수 있다. 이것을 JavaBean 규약이라고 하며, property 접근 방식이라고도 한다.
+
+- `실행결과(http://localhost:8080/hello-api?name=spring!!!!!!!)`
+<img width="397" alt="스크린샷 2023-11-28 21 48 14" src="https://github.com/hamsangjin/TIL/assets/103736614/14688221-89b1-4e23-a33f-b3e7562391bb">
+
+- 이렇게 객체를 반환하게 되면 객체가 JSON 형식으로 변환되어 반환된다.
+
+> JSON : 속성-값 쌍, 배열 자료형 또는 기타 모든 시리얼화 가능한 값 또는 Key-Value 쌍으로 이루어진 데이터 오브젝트를 전달하기 위해 인간이 읽을 수 있는 텍스트를 사용하는 개방형 표준 포맷이다.
+
+- @ResponseBody를 사용한 API 방식의 사용 원리
+<img width="589" alt="스크린샷 2023-11-28 21 52 42" src="https://github.com/hamsangjin/TIL/assets/103736614/5cade8d4-acbb-484f-a540-2a0bd7f7e40c">
+
+1. 웹브라우저에서 `localhost:8080/hello-api`를 요청하면 내장 톰켓 서버가 받아서 스프링 컨테이너에 넘겨준다.
+2. 스프링 컨테이너는 Hello-Controller에서 매핑되어있는 걸 확인하고, ResponseBody라는 애노테이션이 붙어있으므로 기존 방법과 달리 ViewResolver한테 넘기지 않고 HTTP 응답에 데이터를 넣는 식으로 동작한다.
+3. 만약 데이터가 문자라면 Http Message Converter 중 String Converter가 동작하고, 객체라면 Json Converter가 동작해 json방식으로 데이터를 만들어준다.
+4. 그렇게 만들어진 데이터를 요청한 웹브라우저로 보내준다.
+
+* json이 아닌 xml로도 반환받을 수 있다.
 
 
