--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -7,14 +7,13 @@
 - [MVC와 템플릿 엔진](#MVC와-템플릿-엔진)
 - [API](#API)
 
-<!-- 
 - [회원 관리 예제(백엔드 개발)](#회원-관리-예제(백엔드-개발))
   - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
   - [회원 서비스 개발](#회원-서비스-개발)
   - [회원 서비스 테스트](#회원-서비스-테스트)
--->
+
 
 ## 정적 컨텐츠
 
@@ -213,5 +212,44 @@ public class HelloController {
 4. 그렇게 만들어진 데이터를 요청한 웹브라우저로 보내준다.
 
 * json이 아닌 xml로도 반환받을 수 있다.
+
+
+----
+
+## 회원 관리 예제(백엔드 개발)
+
+### 비즈니스 요구사항 정리
+
+우리가 구현할 회원 관리 예제의 요구사항은 아래와 같다.
+- 데이터 : 회원 ID, 이름
+- 기능 : 회원 등록, 조회
+- 데이터 저장소는 선정되지 않았다고 가정
+
+</br>
+
+* 일반적인 웹 애플리케이션 계층 구조
+<img width="587" alt="스크린샷 2023-11-29 20 49 11" src="https://github.com/hamsangjin/TIL/assets/103736614/abb90c59-4f02-4889-9080-5635d1d5efb5">
+
+- 컨트롤러 : 웹 MVC의 컨트롤러 역할
+- 서비스 : 핵심 비즈니스 로직 구현
+- 리포지토리 : 데이터베이스에 접근하고, 도메인 객체를 DB에 저장하고 관리
+- 도메인 : 비즈니스 도메인 객체 (ex: 회원, 주문 등 주로 데이터베이스에 저장하고 관리됨)
+
+</br>
+
+구현할 회원 관리 예제의 클래스 의존관계는 아래와 같다.
+<img width="582" alt="스크린샷 2023-11-29 20 58 09" src="https://github.com/hamsangjin/TIL/assets/103736614/28e5e797-caf0-4904-a423-e919879d9150">
+
+- 데이터 저장소가 선정되지 않아서, 먼저 인터페이스로 구현 클래스를 변경할 수 있게 설계
+- 
+
+
+### 회원 도메인과 리포지토리 만들기
+
+### 회원 리포지토리 테스트 케이스 작성
+
+### 회원 서비스 개발
+
+### 회원 서비스 테스트
 
 
