docs : 회원 도메인과 리포지토리 만들기

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -10,9 +10,13 @@
 - [회원 관리 예제(백엔드 개발)](#회원-관리-예제(백엔드-개발))
   - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
+
+<!--
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
   - [회원 서비스 개발](#회원-서비스-개발)
   - [회원 서비스 테스트](#회원-서비스-테스트)
+
+-->
 
 
 ## 정적 컨텐츠
@@ -194,7 +198,7 @@ public class HelloController {
 }
 ```
 
-- `Tip` :  Mac OS 기준으로 `cmd + n`을 누르면 generate가 나오는데 거기서 getter and setter를 선택하면 `getName()`과 `setName()` 함수를 입력할 수 있다. 이것을 JavaBean 규약이라고 하며, property 접근 방식이라고도 한다.
+- `Tip` :  Mac OS 기준으로 `cmd + n`을 누르면 generate가 나오는데 거기서 getter and setter를 선택하면 `getName()`과 `setName()` 메소드를 입력할 수 있다. 이것을 JavaBean 규약이라고 하며, property 접근 방식이라고도 한다.
 
 - `실행결과(http://localhost:8080/hello-api?name=spring!!!!!!!)`
 <img width="397" alt="스크린샷 2023-11-28 21 48 14" src="https://github.com/hamsangjin/TIL/assets/103736614/14688221-89b1-4e23-a33f-b3e7562391bb">
@@ -240,11 +244,134 @@ public class HelloController {
 구현할 회원 관리 예제의 클래스 의존관계는 아래와 같다.
 <img width="582" alt="스크린샷 2023-11-29 20 58 09" src="https://github.com/hamsangjin/TIL/assets/103736614/28e5e797-caf0-4904-a423-e919879d9150">
 
-- 데이터 저장소가 선정되지 않아서, 먼저 인터페이스로 구현 클래스를 변경할 수 있게 설계
-- 
+- 데이터 저장소가 선정되지 않아서, 먼저 인터페이스로 구현 클래스를 변경할 수 있게 설계했으며, 개발을 진행하기 위해 초기 개발 단계에서는 구현체로 가벼운 메모리 기반의 데이터 저장소 사용
 
+---
 
 ### 회원 도메인과 리포지토리 만들기
+
+#### 회원 객체
+
+먼저 java/hello.hellospring에 domain이란 이름의 패키지를 만들고 그 안에 Member.java(class) 파일을 생성한다.
+
+- java/hello.hellospring/domain/Member.java
+
+```java
+package hello.hellospring.domain;
+public class Member {
+    private Long id;
+    private String name;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
+```
+
+- 여기서도 generate에 getter and setter를 이용해 메소드들을 불러왔다.
+
+#### 회원 리포지토리 인터페이스
+
+이번엔 java/hello.hellospring에 repository란 이름의 패키지를 만들고 그 안에 MemberRepository.java(interface) 파일을 생성한다.
+
+</br>
+
+> **배워가는 JAVA 시간 !** 
+> * `Interface` : 다른 클래스를 작성할 때 기본이 되는 틀을 제공하면서, 다른 클래스 사이의 중간 매개 역할까지 담당하는 일종의 추상 클래스를 의미한다.
+>   - 다중 상속 가능
+>   - 추상 메소드와 상수로만 구성
+>   - 메소드 오버라이딩 필수
+
+</br>
+
+- java/hello.hellospring/repository.MemberRepository.java
+
+```java
+package hello.hellospring.repository;
+
+import hello.hellospring.domain.Member;
+
+import java.util.List;
+import java.util.Optional;
+
+public interface MemberRepository {
+      Member save(Member member);
+      Optional<Member> findById(Long id);
+      Optional<Member> findByName(String name);
+      List<Member> findAll();
+}
+```
+
+</br>
+
+#### 회원 리포지토리 메모리 구현체
+이제 MemberRepository를 상속한 MemoryMemberRepository 클래스를 만들고, option + enter를 통해 인터페이스에 생성한 메소드들을 선언한다.
+
+- java/hello.hellospring/repository.MemoryMemberRepository.java
+
+```java
+
+package hello.hellospring.repository;
+import hello.hellospring.domain.Member;
+import java.util.*;
+public class MemoryMemberRepository implements MemberRepository {
+    private static Map<Long, Member> store = new HashMap<>();
+    private static long sequence = 0L;
+
+    @Override
+    public Member save(Member member) {
+        member.setId(++sequence);
+        store.put(member.getId(), member);
+        return member;
+    }
+
+    @Override
+    public Optional<Member> findById(Long id) {
+        return Optional.ofNullable(store.get(id));
+    }
+
+    @Override
+    public List<Member> findAll() {
+        return new ArrayList<>(store.values());
+    }
+
+    @Override
+    public Optional<Member> findByName(String name) {
+        return store.values().stream()
+                .filter(member -> member.getName().equals(name))
+                .findAny();
+    }
+
+    public void clearStore() {
+        store.clear();
+    }
+}
+
+> **배워가는 JAVA 시간 !** 
+> * `Map` : 사전형과 비슷하며 Key와 Value을 한 쌍으로 갖는 자료형이다.
+>   - `HashMap` : Map 자료형 중 가장 기본이며, put 메소드로 key와 value를 추가할 수 있고, get 메소드로 key에 해당하는 value를 얻을 수 있다.
+> * `Optional` : Java 8부터 도입된 Optional은 값이 없는 경우를 표현하기 위한 클래스이며, Optional 클래스는 제네릭을 사용하여 어떤 타입의 객체도 감싸서 담을 수 있다.
+>   - `of()` : 값이 null이 아닌 경우에만 Optional 객체를 생성
+>   - `ofNullable()` : 값이 null인 경우에도 Optional 객체를 생성.
+>   - `empty()` : 값을 갖지 않는 빈(empty) Optional 객체를 생성
+> * `stream` : 컬렉션 형태로 구성된 데이터를 람다 함수를 이용해 쉽게 처리할 수 있으며 기존 loop를 대체할 수 있다.
+>   - `filter` : stream 클래스에서 제공하며, 스트림 요소를 순회하면서 특정 조건을 만족하는 요소로 구성된 새로운 스트림을 반환합니다.
+>     - `->` : 자바 람다표현식의 syntax
+>     - `findAny()` : 조건에 일치하는 요소 1개를 return
+
+```
 
 ### 회원 리포지토리 테스트 케이스 작성
 
