docs : image sorting

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -49,7 +49,8 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 현재 서버 포트가 8080이므로, localhost:8080/hello-static.html을 브라우저에서 요청한다.
 
 - `실행 결과(http://localhost:8080/hello-static.html)`
-<img width="399" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/6e05964f-73cb-4adb-8694-e2a623343405">
+<p align="center">
+<img width="399" alt="정적컨텐츠 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/6e05964f-73cb-4adb-8694-e2a623343405"></p>
 
 </br>
 </br>
@@ -60,7 +61,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 
 
 - 동작 원리
-<img width="549" alt="정적 컨텐츠 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/56f34cda-7d34-49c7-89be-2f86aa5183c2">
+<p align="center"><img width="549" alt="정적 컨텐츠 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/56f34cda-7d34-49c7-89be-2f86aa5183c2"></p>
 
 웹브라우저에서 내장톰캣서버에게 localhost:8080/hello-static.html 요청을 하면 내장톰캣서버가 스프링 컨테이너에게 전달해준다. </br>
 그러면 먼저 스프링 컨테이너가 우선순위를 가지고있는 컨트롤러에서 hello-static이 있는지 확인한다. </br>
@@ -106,7 +107,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 </br>
 
 - `실행결과(http://localhost:8080/hello-mvc?name=spring)`
-<img width="386" alt="MVC 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/68b835ca-1e19-472d-b7c4-b2f0d4769b49">
+<p align="center"><img width="386" alt="MVC 실행결과" src="https://github.com/hamsangjin/TIL/assets/103736614/68b835ca-1e19-472d-b7c4-b2f0d4769b49"></p>
 
 </br>
 
@@ -118,7 +119,7 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 </br>
 
 - 동작 원리
-<img width="543" alt="MVC 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/c16a7d0c-694b-446e-b8fd-db1875fc73bf">
+<p align="center"><img width="543" alt="MVC 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/c16a7d0c-694b-446e-b8fd-db1875fc73bf"></p>
 
 1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러
 를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
@@ -157,17 +158,17 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 ```
 
 - `실행결과(http://localhost:8080/hello-string?name=spring!!!!!!!)`
-<img width="483" alt="스크린샷 2023-11-28 21 27 17" src="https://github.com/hamsangjin/TIL/assets/103736614/d6fc6a9d-c02a-4122-bf2b-e7de5d45d22e">
+<p align="center"><img width="483" alt="스크린샷 2023-11-28 21 27 17" src="https://github.com/hamsangjin/TIL/assets/103736614/d6fc6a9d-c02a-4122-bf2b-e7de5d45d22e"></p>
 
 - @ResponseBody : Http 통신 프로토콜엔 Header부와 Body부가 있는데, 그 중 Body부에 데이터`("hello " + name)`를 직접 넣어주겠다는 뜻이며, 템플린 엔진과는 다르게 viewResolver를 사용하지 않는다.
 
 - 이렇게 사용한다면 아래 사진과 같이 Http Body에 문자 내용을 직접 반환한다.
 
 - `ResponseBody의 Http Body`
-<img width="204" alt="스크린샷 2023-11-28 21 31 37" src="https://github.com/hamsangjin/TIL/assets/103736614/1f9c60af-ef72-44dd-8875-b8a2c055bbdb">
+<p align="center"><img width="204" alt="스크린샷 2023-11-28 21 31 37" src="https://github.com/hamsangjin/TIL/assets/103736614/1f9c60af-ef72-44dd-8875-b8a2c055bbdb"></p>
 
 - `기존 MVC의 Http Body`
-<img width="174" alt="스크린샷 2023-11-28 21 28 59" src="https://github.com/hamsangjin/TIL/assets/103736614/faf19076-5e85-4b9f-9000-446053f3f9d0">
+<p align="center"><img width="174" alt="스크린샷 2023-11-28 21 28 59" src="https://github.com/hamsangjin/TIL/assets/103736614/faf19076-5e85-4b9f-9000-446053f3f9d0"></p>
 
 * 하지만 문자를 반환하는 방법을 쓸 일은 거의 없다.
 
@@ -201,14 +202,14 @@ public class HelloController {
 - `Tip` :  Mac OS 기준으로 `cmd + n`을 누르면 generate가 나오는데 거기서 getter and setter를 선택하면 `getName()`과 `setName()` 메소드를 입력할 수 있다. 이것을 JavaBean 규약이라고 하며, property 접근 방식이라고도 한다.
 
 - `실행결과(http://localhost:8080/hello-api?name=spring!!!!!!!)`
-<img width="397" alt="스크린샷 2023-11-28 21 48 14" src="https://github.com/hamsangjin/TIL/assets/103736614/14688221-89b1-4e23-a33f-b3e7562391bb">
+<p align="center"><img width="397" alt="스크린샷 2023-11-28 21 48 14" src="https://github.com/hamsangjin/TIL/assets/103736614/14688221-89b1-4e23-a33f-b3e7562391bb"></p>
 
 - 이렇게 객체를 반환하게 되면 객체가 JSON 형식으로 변환되어 반환된다.
 
 > JSON : 속성-값 쌍, 배열 자료형 또는 기타 모든 시리얼화 가능한 값 또는 Key-Value 쌍으로 이루어진 데이터 오브젝트를 전달하기 위해 인간이 읽을 수 있는 텍스트를 사용하는 개방형 표준 포맷이다.
 
 - @ResponseBody를 사용한 API 방식의 사용 원리
-<img width="589" alt="스크린샷 2023-11-28 21 52 42" src="https://github.com/hamsangjin/TIL/assets/103736614/5cade8d4-acbb-484f-a540-2a0bd7f7e40c">
+<p align="center"><img width="589" alt="스크린샷 2023-11-28 21 52 42" src="https://github.com/hamsangjin/TIL/assets/103736614/5cade8d4-acbb-484f-a540-2a0bd7f7e40c"></p>
 
 1. 웹브라우저에서 `localhost:8080/hello-api`를 요청하면 내장 톰켓 서버가 받아서 스프링 컨테이너에 넘겨준다.
 2. 스프링 컨테이너는 Hello-Controller에서 매핑되어있는 걸 확인하고, ResponseBody라는 애노테이션이 붙어있으므로 기존 방법과 달리 ViewResolver한테 넘기지 않고 HTTP 응답에 데이터를 넣는 식으로 동작한다.
@@ -232,7 +233,7 @@ public class HelloController {
 </br>
 
 * 일반적인 웹 애플리케이션 계층 구조
-<img width="587" alt="스크린샷 2023-11-29 20 49 11" src="https://github.com/hamsangjin/TIL/assets/103736614/abb90c59-4f02-4889-9080-5635d1d5efb5">
+<p align="center"><img width="587" alt="스크린샷 2023-11-29 20 49 11" src="https://github.com/hamsangjin/TIL/assets/103736614/abb90c59-4f02-4889-9080-5635d1d5efb5"></p>
 
 - 컨트롤러 : 웹 MVC의 컨트롤러 역할
 - 서비스 : 핵심 비즈니스 로직 구현
@@ -242,7 +243,7 @@ public class HelloController {
 </br>
 
 구현할 회원 관리 예제의 클래스 의존관계는 아래와 같다.
-<img width="582" alt="스크린샷 2023-11-29 20 58 09" src="https://github.com/hamsangjin/TIL/assets/103736614/28e5e797-caf0-4904-a423-e919879d9150">
+<p align="center"><img width="582" alt="스크린샷 2023-11-29 20 58 09" src="https://github.com/hamsangjin/TIL/assets/103736614/28e5e797-caf0-4904-a423-e919879d9150"></p>
 
 - 데이터 저장소가 선정되지 않아서, 먼저 인터페이스로 구현 클래스를 변경할 수 있게 설계했으며, 개발을 진행하기 위해 초기 개발 단계에서는 구현체로 가벼운 메모리 기반의 데이터 저장소 사용
 
