--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -10,12 +10,10 @@
 - [회원 관리 예제(백엔드 개발)](#회원-관리-예제(백엔드-개발))
   - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
-
-<!--
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
+<!--
   - [회원 서비스 개발](#회원-서비스-개발)
   - [회원 서비스 테스트](#회원-서비스-테스트)
-
 -->
 
 
@@ -111,9 +109,12 @@ public class HelloController {
 
 </br>
 
-- `@GetMapping("hello-mvc")` : GET방식이며, "hello-mvc"로 호출하는 것으로 정의해놓은 것이다.
-- `@RequestParam(value="",required="")` : 호출할 때 파라미터를 정의한 것이다. 코드를 보면 @RequestParam("name") String name으로 되어있다. 즉, 파라미터를 name이라는 key로 String 데이터를 받겠다라는 의미다. 그래서 실행하는 url을 보면 name=spring으로 호출하고, 데이터 처리를 할 때는 spring이라는 데이터가 들어와 동작하게되는 것이다.
-  - `required`의 **default는 true**, 파라미터가 필수가되어야하는 의미이기 때문에 false를 넣어주면 있어도 없어도 동작할 수 있다.
+> **배워가는 JAVA 시간 !**
+> - `@RequestMapping` : Spring 컨트롤러의 URI 메소드를 정의하는데 쓰이며, 요청받는 형식을 GET, POST, PATCH, PUT, DELETE 로 정의 할 수 있고, 정의하지 않을경우 디폴트로 GET이 정의된다.
+>   - `@GetMapping`, `@PostMapping`, `@PatchMapping`, `@PutMapping`, `@DeleteMapping` : 각 매핑별로 `Get`을 예로 들면 위에서 설명한 `@RequestMapping(Method=RequestMethod.GET)`와 같고, 각각의 형식별로 사용할 수 있다.
+>   - 여기서 사용된 `@GetMapping("hello-mvc")`는 www.localhost:8080/hello-mvc로 Get방식 접속할 경우를 의미한다.
+> - `@RequestParam(value="",required="")` : 호출할 때 파라미터를 정의한 것이다. 코드를 보면 @RequestParam("name") String name으로 되어있다. 즉, 파라미터를 name이라는 key로 String 데이터를 받겠다라는 의미다. 그래서 실행하는 url을 보면 name=spring으로 호출하고, 데이터 처리를 할 때는 spring이라는 데이터가 들어와 동작하게되는 것이다.
+  - `required`의 **default는 true**, 파라미터가 필수가되어야하는 의미이기 때문에 false를 넣어주면 파라미터 유무에 상관없이 동작할 수 있다.
 - `<p th:text="'hello ' + ${name}">hello! empty</p>` : **템플릿 엔진**을 사용해 name이라는 데이터(spirng)가 넘어왔을 때 `hello spring`이 보여지고 만약 데이터가 없다면 그냥 `hello!`가 보여진다.
 
 </br>
@@ -253,9 +254,9 @@ public class HelloController {
 
 #### 회원 객체
 
-먼저 java/hello.hellospring에 domain이란 이름의 패키지를 만들고 그 안에 Member.java(class) 파일을 생성한다.
+먼저 java/hello/hellospring에 domain이란 이름의 패키지를 만들고 그 안에 Member.java(class) 파일을 생성한다.
 
-- java/hello.hellospring/domain/Member.java
+- java/hello/hellospring/domain/Member.java
 
 ```java
 package hello.hellospring.domain;
@@ -297,7 +298,7 @@ public class Member {
 
 </br>
 
-- java/hello.hellospring/repository.MemberRepository.java
+- java/hello/hellospring/repository.MemberRepository.java
 
 ```java
 package hello.hellospring.repository;
@@ -318,9 +319,9 @@ public interface MemberRepository {
 </br>
 
 #### 회원 리포지토리 메모리 구현체
-이제 MemberRepository를 상속한 MemoryMemberRepository 클래스를 만들고, option + enter를 통해 인터페이스에 생성한 메소드들을 선언한다.
+이제 MemberRepository를 상속한 MemoryMemberRepository 클래스를 만들고, `option + enter`를 통해 인터페이스에 생성한 메소드들을 선언한다.
 
-- java/hello.hellospring/repository.MemoryMemberRepository.java
+- java/hello/hellospring/repository.MemoryMemberRepository.java
 
 ```java
 
@@ -373,9 +374,108 @@ public class MemoryMemberRepository implements MemberRepository {
 >     - `->` : 자바 람다표현식의 syntax
 >     - `findAny()` : 조건에 일치하는 요소 1개를 return
 
-<!--
+</br>
+
 ### 회원 리포지토리 테스트 케이스 작성
 
+> 개발한 기능을 테스트할 때 자바의 **main** 메소드를 통해 실행하거나, **컨트롤러**를 이용해 테스트할 수 있다.
+> 하지만 이러한 방법들은 오래 걸리고, 반복 실행이 어렵고, 여러 테스트를 한 번에 실행하기 어렵다.
+> 그래서 자바는 JUnit 프레임워크로 테스트를 실행해 이런 문제들을 해결한다.
+
+이제 테스트를 하기 위해 main이 아닌 test 폴더에 테스트 파일을 생성해준다.
+이때 test의 하위 폴더인 java/hello/hellospring... 의 경로는 main과 동일하게 해줘야한다.
+
+- src/test/java/hello/hellospring/repository/MemoryMemberRepositoryTest.java
+
+```java
+package hello.hellospring.repository;
+import hello.hellospring.domain.Member;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
+import java.util.List;
+import java.util.Optional;
+import static org.assertj.core.api.Assertions.*;
+
+class MemoryMemberRepositoryTest {
+    MemoryMemberRepository repository = new MemoryMemberRepository();
+
+    @AfterEach
+    public void afterEach() {
+        repository.clearStore();
+    }
+
+    @Test
+    public void save() {
+
+        //given
+        Member member = new Member();
+        member.setName("spring");
+
+        //when
+        repository.save(member);
+
+        //then
+        Member result = repository.findById(member.getId()).get();
+        assertThat(result).isEqualTo(member);
+    }
+
+    @Test
+    public void findByName() {
+        //given
+        Member member1 = new Member();
+        member1.setName("spring1");
+        repository.save(member1);
+
+        Member member2 = new Member();
+        member2.setName("spring2");
+        repository.save(member2);
+
+        //when
+        Member result = repository.findByName("spring1").get();
+
+        //then
+        assertThat(result).isEqualTo(member1);
+    }
+
+    @Test
+    public void findAll() {
+        //given
+        Member member1 = new Member();
+        member1.setName("spring1");
+        repository.save(member1);
+
+        Member member2 = new Member();
+        member2.setName("spring2");
+        repository.save(member2);
+
+        //when
+        List<Member> result = repository.findAll();
+
+        //then
+        assertThat(result.size()).isEqualTo(2);
+    }
+}
+```
+
+* 여기서 `get()`을 사용하는 이유는 `findById`와 `findByName` 메소드이 Optional<Member>로 선언되어 있기 때문이다.
+* `Optional`은 무언가를 감싸고 있다는 의미인 `wrapper 객체`이므로 Member를 감싸고 있으니, 감싸져있는 Member를 `get()`을 통해 가져오는 것
+* `findAll` 메소드를 보면 `Optional`이 아닌 `List`로 선언되어 있기때문에 `get()`을 사용하지 않는 것을 볼 수 있다.
+
+> **배워가는 JAVA 시간 !**
+> - `JUnit` : 자바 프로그래밍 언어용 유닛 테스트 프레임워크
+> - `단위 테스트` : 특정 소스코드의 모듈이 의도한 대로 작동하는지 검증하는 테스트
+> - `@Test` : 해당 메소드가 단위 테스트임을 나타내는 어노테이션이며, JUnit이 @Test 어노테이션이 붙은 메소드를 단위 테스트로 인식하여 실행시킨다
+> * `Assertj` : 자바 테스트를 위해 좀 더 풍부한 문법을 제공하고 메서드 체이닝을 통해 직관적인 테스트 흐름을 작성할 수 있도록 개발된 오픈소스 라이브러리 
+> - `Assertions` : 테스트 결과를 확인할 때 사용하는 메소드
+>   - `assertEquals(expected, actual)` : expected와 actual이 동일하면 True를 반환하는 인자
+>   - `assertThat(test target)` : `assertEquals`과 사용 목적은 같지만, 다양한 메소드를 연속으로 호출하며 사용할 수 있고 또, `assertEquals`의 인자 순서를 헷갈릴 일도 없다.
+>     - ex) `assertThat(actual).isEqualTo(expected)`
+> - `@AfterEach` : 각 테스트가 종료될 때 마다 `@AfterEach` 어노테이션이 붙은 메소드를 실행해준다. 사용하는 이유는 테스트를 하나씩 진행하다가 클래스 단위로 동작할 경우 메모리 DB에 직전 테스트의 결과가 남아 그로인해 테스트가 실패할 수 있기 때문이다. 하지만 테스트는 각각 독립적으로 실행되어야 하며, 테스트 순서에 의존관계가 있는 것은 좋은 테스트가 아니다.
+
+- `@AfterEach`를 사용하지 않았을 때 나타나는 오류
+<p align="center"><img width="581" alt="AfterEach" src="https://github.com/hamsangjin/TIL/assets/103736614/7b6ea44c-6ed0-4beb-a667-e710bfe3bfa8"></p>
+
+<!--
 ### 회원 서비스 개발
 
 ### 회원 서비스 테스트
