--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -11,8 +11,8 @@
   - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
-<!--
   - [회원 서비스 개발](#회원-서비스-개발)
+<!--
   - [회원 서비스 테스트](#회원-서비스-테스트)
 -->
 
@@ -475,9 +475,73 @@ class MemoryMemberRepositoryTest {
 - `@AfterEach`를 사용하지 않았을 때 나타나는 오류
 <p align="center"><img width="581" alt="AfterEach" src="https://github.com/hamsangjin/TIL/assets/103736614/7b6ea44c-6ed0-4beb-a667-e710bfe3bfa8"></p>
 
-<!--
+</br>
+
 ### 회원 서비스 개발
 
+이제 실제 비즈니스 로직 구현을 해보자
+
+먼저 java/hello/hellospring에 service 패키지를 생성하고 MemberService.java 클래스를 만들어준다.
+
+- java/hello/hellospring/service/MemberService.java
+  
+```java
+package hello.hellospring.service;
+import hello.hellospring.domain.Member;
+import hello.hellospring.repository.MemberRepository;
+
+import java.util.List;
+import java.util.Optional;
+
+public class MemberService {
+    private final MemberRepository memberRepository = new MemoryMemberRepository();
+
+    // 회원가입
+    public Long join(Member member) {
+        validateDuplicateMember(member); //중복 회원 검증 memberRepository.save(member);
+        return member.getId();
+    }
+
+    private void validateDuplicateMember(Member member) {
+        memberRepository.findByName(member.getName())
+            .ifPresent(m -> {
+                throw new IllegalStateException("이미 존재하는 회원입니다.");
+            });
+    }
+
+    // 전체 회원 조회
+    public List<Member> findMembers() {
+        return memberRepository.findAll();
+    }
+
+    // ID를 이용한 회원 조회
+    public Optional<Member> findOne(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+}
+```
+
+
+
+> 배워가는 단축키
+> - `cmd + option + v`를 이용하여
+> - `ctrl + t`
+
+</br>
+
+> **배워가는 JAVA 시간 !**
+> - `final` : 어떤 곳(변수, 메소드, 클래스)에 사용하냐에 따라 다르게 쓰이지만 무언가를 제한한다는 의미로 사용된다.
+>   - `변수` : 변수 수정 불가
+>   - `메소드` : 메소드 오버라이딩 불가
+>   - `클래스` : 클래스 상속 불가
+> - `Optional` 객체를 꺼낼 땐 `get()`보다는 `orElseGet()`을 사용하는 게 좋다
+>   - `orElseGet()` : 만약 값이 있으면 꺼내고, 값이 없다면 ~을 실행함
+> - `ifPresent()` : Optional의 메소드들 중 하나로, null이 아니고 어떤 값이 있으면 괄호안에 로직이 동작
+> - `throw` : 프로그래머가 강제로 예외처리를 하는 것
+>   - `IllegalStateException` : 객체의 현재 상태가 메서드 호출에 적합하지 않은 경우에 발생하는 예외
+
+
+<!--
 ### 회원 서비스 테스트
 
 -->
