docs : 회원 서비스 테스트 및 스프링 웹 개발 기초 끝

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -12,10 +12,9 @@
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
   - [회원 서비스 개발](#회원-서비스-개발)
-<!--
   - [회원 서비스 테스트](#회원-서비스-테스트)
--->
 
+</br>
 
 ## 정적 컨텐츠
 
@@ -483,7 +482,7 @@ class MemoryMemberRepositoryTest {
 
 먼저 java/hello/hellospring에 service 패키지를 생성하고 MemberService.java 클래스를 만들어준다.
 
-- java/hello/hellospring/service/MemberService.java
+- main/java/hello/hellospring/service/MemberService.java
   
 ```java
 package hello.hellospring.service;
@@ -524,8 +523,8 @@ public class MemberService {
 
 
 > 배워가는 단축키
-> - `cmd + option + v`를 이용하여
-> - `ctrl + t`
+> - `cmd + option + v` : 값을 변수에 리턴받게 해줌
+> - `ctrl + t` : refactor this 창 띄우기
 
 </br>
 
@@ -541,7 +540,141 @@ public class MemberService {
 >   - `IllegalStateException` : 객체의 현재 상태가 메서드 호출에 적합하지 않은 경우에 발생하는 예외
 
 
-<!--
+
 ### 회원 서비스 테스트
 
--->
+위에서 구현한 회원 서비스를 테스트하기 위해 테스트 코드를 생성해보자.
+
+이때 `MemberService`클래스에서 `cmd + shift + t` 단축키를 이용해 테스트 코드를 자동으로 생성시켰다.
+- `test` 폴더에 해당 클래스 메소드 틀을 만들어주고, `import static org.junit.jupiter.api.Assertions.*;`도 자동으로 입력
+
+- test/java/hello/hellospring/service/MemberServiceTest.java
+
+```java
+package hello.hellospring.service;
+
+import hello.hellospring.domain.Member;
+import hello.hellospring.repository.MemberRepository;
+import hello.hellospring.repository.MemoryMemberRepository;
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.*;
+
+class MemberServiceTest {
+
+    MemberService memberService;
+    MemoryMemberRepository memberRepository;
+
+    @BeforeEach
+    public void beforeEach(){
+        memberRepository = new MemoryMemberRepository();
+        memberService = new MemberService(memberRepository);
+    }
+
+    @AfterEach
+    public void afterEach(){
+        memberRepository.clearStore();
+    }
+
+    @Test
+    void 회원가입() {
+        // given
+        Member member = new Member();
+        member.setName("test");
+
+        // when
+        Long saveId = memberService.join(member);
+
+        // then
+        Member findMember = memberService.findOne(saveId).get();
+        assertThat(member.getName()).isEqualTo(findMember.getName());
+    }
+
+    @Test
+    public void 중복_회원_예외() {
+        // given
+        Member member1 = new Member();
+        member1.setName("test");
+
+        Member member2 = new Member();
+        member2.setName("test");
+
+        // when
+        memberService.join(member1);
+
+        /*
+        try {
+            memberService.join(member2);
+            fail();
+        } catch (IllegalStateException e){
+            assertThat(e.getMessage()).isEqualTo("이미 존재하는 회원입니다.");
+        }
+        */
+
+        IllegalStateException e = assertThrows(IllegalStateException.class, () -> memberService.join(member2));
+        assertThat(e.getMessage()).isEqualTo("이미 존재하는 회원입니다.");
+
+    }
+
+    @Test
+    void findMembers() {
+    }
+
+    @Test
+    void findOne() {
+    }
+}
+```
+
+</br>
+
+> 배워가는 JAVA 시간 !!
+> - `assertThrows` : 이 로직을 발생시켰을 때 이 오류가 발생해야 한다라는 뜻으로, `try-catch`문을 사용 안 해도 되며, 여기선 `memberService.join(member2)`라는 로직을 실행했을 때 `IllegalStateException` 클래스가 발생해야한다는 식으로 쓰였다.
+> - `e.getMessage()` : 에러의 원인을 간단하게 출력, 여기선 에러가 맞게 발생했는지 메시지를 비교하는 방법으로 사용됐다.
+> - `@BeforeEach` : 각 테스트 실행 전에 호출되며, 테스트가 서로 영향이 없도록 항상 새로운 객체를 생성하고, 의존 관계도 새로 맺어준다.
+
+</br>
+
+* `Given - When - Then Pattern` : 테스트 케이스를 작성하는 방법 중 하나
+  - `Given` : 시나리오 진행에 필요한 값을 설정, 테스트의 상태를 설정 -> 준비
+  - `When` : 시나리오 진행 필요조건 명시, 테스트하고자 하는 행동 -> 실행
+  - `Then` : 시나리오를 완료했을 때 보장해야 하는 결과를 명시, 예상되는 변화 설명 -> 검증
+
+</br>
+
+그리고 기존엔 아래와 같이 `MemberService`가 `MemoryMemberRepository`를 직접 생성하게 했지만,
+```java
+public class MemberService {
+      private final MemberRepository memberRepository = new MemoryMemberRepository();
+}
+```
+</br>
+
+이제는 MemberRepository의 코드가 MemberService 코드를 DI 가능하게 변경했다.
+```java
+public class MemberService {
+    private final MemberRepository memberRepository;
+
+    public MemberService(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+    ...
+}
+```
+
+</br>
+
+> `Dependency Injection(DI)` : 의존 관계 주입이라고 하며, 어떤 객체가 사용하는 의존객체를 직접 만들어 사용하는 것이 아닌, 주입받아 사용하는 것
+
+
+
+
+
+
