docs : 스프링 웹 개발 기초 마무리

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -65,8 +65,6 @@ Spring Boot에서 정적컨텐츠 기능을 자동으로 제공
 확인해보고 지금과 같이hello-static과 맵핑이 되어있는 컨트롤러를 찾지 못하면 resources/static에서 hello-static.html 파일이 있는지 확인한 후, 웹 브라우저에 전달해준다.
 
 </br>
-</br>
-</br>
 
 ## MVC와 템플릿 엔진
 
@@ -121,21 +119,18 @@ public class HelloController {
 - 동작 원리
 <p align="center"><img width="543" alt="MVC 동작 원리" src="https://github.com/hamsangjin/TIL/assets/103736614/c16a7d0c-694b-446e-b8fd-db1875fc73bf"></p>
 
-1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러
-를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
+1. Get요청(http://localhost:8080/hello-name?name=spring) : 스프링 프로젝트에서 해당 컨트롤러를 생성한 후에, 브라우저에서 작성한 주소를 호출하는 것
 
 2. 내장톰캣서버에 요청 후 스프링컨테이너에 전달한다.
 
-3. 스프링 컨테이너에서는 HelloController에 맵핑되어있는 것을 확인하고 hello-template에 모델을 리턴
+3. 스프링 컨테이너에서는 `HelloController`에 맵핑되어있는 것을 확인하고 `hello-template`에 모델을 리턴
 
-4. ViewResolver가 리턴한 hello-template을 찾아서 템플린엔진에게 처리해달라고 요청한다.
+4. `ViewResolver`가 리턴한 `hello-template`을 찾아서 템플린엔진에게 처리해달라고 요청한다.
   - **ViewResolver**는 화면을 찾아주고, 템플릿엔진을 연결시켜주는 역할
 
-5. 템플릿 엔진은 동적으로 넘어온 데이터를 치환하여 변경하고, html로 변환하여 전달한다.
+5. 템플릿 엔진은 동적으로 넘어온 데이터를 치환하여 변경하고, `html`로 변환하여 전달한다.
 
 
-</br>
-</br>
 </br>
 
 ## API
@@ -172,9 +167,8 @@ public class HelloController {
 
 * 하지만 문자를 반환하는 방법을 쓸 일은 거의 없다.
 
----
 
-이제 @ResponseBody를 이용해 객체를 반환하는 방법을 사용해보자
+이제 `@ResponseBody`를 이용해 객체를 반환하는 방법을 사용해보자
 - java/hello.hellospring/controller/HelloController.java
 
 ```java
@@ -208,18 +202,17 @@ public class HelloController {
 
 > JSON : 속성-값 쌍, 배열 자료형 또는 기타 모든 시리얼화 가능한 값 또는 Key-Value 쌍으로 이루어진 데이터 오브젝트를 전달하기 위해 인간이 읽을 수 있는 텍스트를 사용하는 개방형 표준 포맷이다.
 
-- @ResponseBody를 사용한 API 방식의 사용 원리
+- `@ResponseBody`를 사용한 API 방식의 사용 원리
 <p align="center"><img width="589" alt="스크린샷 2023-11-28 21 52 42" src="https://github.com/hamsangjin/TIL/assets/103736614/5cade8d4-acbb-484f-a540-2a0bd7f7e40c"></p>
 
 1. 웹브라우저에서 `localhost:8080/hello-api`를 요청하면 내장 톰켓 서버가 받아서 스프링 컨테이너에 넘겨준다.
-2. 스프링 컨테이너는 Hello-Controller에서 매핑되어있는 걸 확인하고, ResponseBody라는 애노테이션이 붙어있으므로 기존 방법과 달리 ViewResolver한테 넘기지 않고 HTTP 응답에 데이터를 넣는 식으로 동작한다.
-3. 만약 데이터가 문자라면 Http Message Converter 중 String Converter가 동작하고, 객체라면 Json Converter가 동작해 json방식으로 데이터를 만들어준다.
+2. 스프링 컨테이너는 `Hello-Controller`에서 매핑되어있는 걸 확인하고, `@ResponseBody`라는 애노테이션이 붙어있으므로 기존 방법과 달리 `ViewResolver`한테 넘기지 않고 `HTTP 응답`에 데이터를 넣는 식으로 동작한다.
+3. 만약 데이터가 문자라면 `Http Message Converter` 중 `String Converter`가 동작하고, 객체라면 `Json Converter`가 동작해 `json`방식으로 데이터를 만들어준다.
 4. 그렇게 만들어진 데이터를 요청한 웹브라우저로 보내준다.
 
-* json이 아닌 xml로도 반환받을 수 있다.
+* `json`이 아닌 `xml`로도 반환받을 수 있다.
 
-
-----
+</br>
 
 ## 회원 관리 예제(백엔드 개발)
 
@@ -247,7 +240,7 @@ public class HelloController {
 
 - 데이터 저장소가 선정되지 않아서, 먼저 인터페이스로 구현 클래스를 변경할 수 있게 설계했으며, 개발을 진행하기 위해 초기 개발 단계에서는 구현체로 가벼운 메모리 기반의 데이터 저장소 사용
 
----
+</br>
 
 ### 회원 도메인과 리포지토리 만들기
 
@@ -281,7 +274,9 @@ public class Member {
 }
 ```
 
-- 여기서도 generate에 getter and setter를 이용해 메소드들을 불러왔다.
+- 여기서도 `generate`에 `getter and setter`를 이용해 메소드들을 불러왔다.
+
+</br>
 
 #### 회원 리포지토리 인터페이스
 
@@ -379,7 +374,7 @@ public class MemoryMemberRepository implements MemberRepository {
 
 > 개발한 기능을 테스트할 때 자바의 **main** 메소드를 통해 실행하거나, **컨트롤러**를 이용해 테스트할 수 있다.
 > 하지만 이러한 방법들은 오래 걸리고, 반복 실행이 어렵고, 여러 테스트를 한 번에 실행하기 어렵다.
-> 그래서 자바는 JUnit 프레임워크로 테스트를 실행해 이런 문제들을 해결한다.
+> 그래서 자바는 **JUnit 프레임워크**로 테스트를 실행해 이런 문제들을 해결한다.
 
 이제 테스트를 하기 위해 main이 아닌 test 폴더에 테스트 파일을 생성해준다.
 이때 test의 하위 폴더인 java/hello/hellospring... 의 경로는 main과 동일하게 해줘야한다.
@@ -539,7 +534,7 @@ public class MemberService {
 > - `throw` : 프로그래머가 강제로 예외처리를 하는 것
 >   - `IllegalStateException` : 객체의 현재 상태가 메서드 호출에 적합하지 않은 경우에 발생하는 예외
 
-
+</br>
 
 ### 회원 서비스 테스트
 
@@ -672,9 +667,3 @@ public class MemberService {
 </br>
 
 > `Dependency Injection(DI)` : 의존 관계 주입이라고 하며, 어떤 객체가 사용하는 의존객체를 직접 만들어 사용하는 것이 아닌, 주입받아 사용하는 것
-
-
-
-
-
-
