docs : 스프링 빈과 의존관계 틀 수정

--- a/Spring/Spring_입문/스프링 빈과 의존관계.md
+++ b/Spring/Spring_입문/스프링 빈과 의존관계.md
@@ -1,19 +1,15 @@
-# Spring 입문 - 스프링 웹 개발 기초
+# Spring 입문 - 스프링 빈과 의존관계
 
 > 인프런의 "스프링 입문 - 코드로 배우는 스프링 부트, 웹 MVC, DB 접근 기술" 강의를 듣고 정리한 내용입니다.
 
 ## 목차
-- [정적 컨텐츠](#정적-컨텐츠)
-- [MVC와 템플릿 엔진](#MVC와-템플릿-엔진)
-- [API](#API)
-
-- [회원 관리 예제(백엔드 개발)](#회원-관리-예제(백엔드-개발))
-  - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
-  - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
-  - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
-  - [회원 서비스 개발](#회원-서비스-개발)
-  - [회원 서비스 테스트](#회원-서비스-테스트)
+- [컴포넌트 스캔과 자동 의존관계 설정](#컴포넌트-스캔과-자동-의존관계-설정)
+- [자바 코드로 직접 스프링 빈 등록하기](#자바-코드로-직접-스프링-빈-등록하기)
 
 </br>
 
-## 정적 컨텐츠
+## 컴포넌트 스캔과 자동 의존관계 설정
+
+</br>
+
+## 자바 코드로 직접 스프링 빈 등록하기
