docs : 컴포넌트 스캔과 자동 의존관계 설정 작성

--- a/Spring/Spring_입문/스프링 빈과 의존관계.md
+++ b/Spring/Spring_입문/스프링 빈과 의존관계.md
@@ -9,6 +9,74 @@
 </br>
 
 ## 컴포넌트 스캔과 자동 의존관계 설정
+이제 `MemberController`가 `MemberService`와 `MemoryMemberRepository`를 사용할 수 있게 의존관계를 만들어보자
+
+- main/java/hello/hellospring/controller/MemberController.java
+```java
+
+package hello.hellospring.controller;
+
+import hello.hellospring.service.MemberService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+
+@Controller
+public class MemberController {
+
+    private final MemberService memberService;
+
+    @Autowired
+    public MemberController(MemberService memberService) {
+        this.memberService = memberService;
+    }
+}
+
+```
+
+> - `@Autowired`의 역할 : `MemberServiceTest`를 할 땐 의존성을 직접 주입했었지만, 여기선 `@Autowired`를 통해 스프링이 연관된 객체를 스프링 컨테이너에서 찾아서 넣어준다.
+>   * 이렇게 객체 의존 관계를 외부에서 넣어주는 것을 `Dependency Injection(DI)`, `의존성 주입`이라고 한다.
+
+</br>
+
+**컴포넌트 스캔 원리**
+* `@Component` 어노테이션이 붙어있으면 스프링 빈을 자동 등록된다.
+* 따라서 `@Component`를 포함하는 `@Controller`, `@Service`, `@Repository` 또한 스프링 컨테이너에 스프링 빈으로 자동 등록된다.
+
+</br>
+
+**MemberService 스프링 빈 등록 - `@Service`, `@Autowired`**
+```java
+@Service
+    public class MemberService {
+        private final MemberRepository memberRepository;
+        @Autowired
+        public MemberService(MemberRepository memberRepository) {
+            this.memberRepository = memberRepository;
+        }
+}
+```
+
+</br>
+
+**MemortMemberRepository 스프링 빈 등록 - `@Repository`**
+```java
+@Repository
+public class MemoryMemberRepository implements MemberRepository {}
+```
+
+</br>
+
+이렇게 `MemberService`와 `MemoryMemberReposity`를 스프링 빈으로 등록하면 스프링 컨테이너엔 이렇게 등록되어 있다.
+
+<p align="center"><img width="512" alt="스크린샷 2023-12-05 23 23 05" src="https://github.com/hamsangjin/TIL/assets/103736614/785623f8-c7d4-4815-9fdc-813e9774da8a"></p>
+
+* 여기서 화살표는 `@AutoWired`를 통해 연결된 것이다.
+
+</br>
+
+> 스프링은 스프링 컨테이너에 스프링 빈으로 등록할 때, 특별한 경우가 아니면 기본적으로 싱글톤으로 등록한다.
+>
+> 따라서 같은 스프링 빈이면 모두 같은 인스턴스다.
 
 </br>
 
