docs : 자바 코드로 직접 스프링 빈 등록하기 작성
스프링 빈과 의존관계 끄읏 -

--- a/Spring/Spring_입문/스프링 빈과 의존관계.md
+++ b/Spring/Spring_입문/스프링 빈과 의존관계.md
@@ -81,3 +81,81 @@ public class MemoryMemberRepository implements MemberRepository {}
 </br>
 
 ## 자바 코드로 직접 스프링 빈 등록하기
+
+먼저 컴포넌트 스캔을 이용한 `MemberService`와, `MemoryMemberRepository`의 스프링 빈 등록이 아닌 자바 코드로 직접 스프링 빈 등록을 하기위해 관련 어노테이션을 제거한다.
+그 후, `MemberService`와 동일한 패키지에 `SpringConfig.java` 파일을 만든다.
+
+</br>
+
+- main/java/hello/hellospring/service/SpringConfig.java
+```java
+package hello.hellospring.service;
+import hello.hellospring.repository.MemberRepository;
+import hello.hellospring.repository.MemoryMemberRepository;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class SpringConfig {
+
+    @Bean
+    public MemberService memberService() {
+        return new MemberService(memberRepository());
+    }
+
+    @Bean
+    public MemberRepository memberRepository(){
+        return new MemoryMemberRepository();
+    }
+}
+
+```
+
+</br>
+
+* Spring에서 Bean을 수동으로 등록하기 위해선 설정 클래스에 `@Configuration`을 붙이고, `@Bean`을 이용해 수동으로 Bean을 등록할 수 있다.
+* 이때, 메소드 이름으로 Bean의 이름이 결정된다. 따라서 중복된 이름이 없게 주의한다.
+
+</br>
+
+**DI 방법 세 가지**
+
+1. 필드 주입
+```java
+@Autowired private final MemberService memberService;
+
+```
+
+2. 생성자 주입
+```java
+private final MemberService memberService;
+
+@Autowired
+public MemberController(MemberService memberService) {
+    this.memberService = memberService;
+}
+
+```
+
+3. Setter 주입
+```java
+private final MemberService memberService;
+
+@Autowired
+public void setMemberService(MemberService memberService) {
+    this.memberService = memberService;
+}
+
+```
+
+</br>
+
+> 하지만 **필드 주입**은 외부에서 접근이 불가능하다는 단점이 있고, **Setter 주입**은 주입받는 객체가 동적으로 변할 가능성에 사용되지만 그런 경우가 거의 희박하므로, **생성자 주입**을 권장한다.
+>
+> `@Autowired`를 통한 의존성 주입(DI)는 스프링 빈으로 등록한 객체에만 동작한다.
+
+</br>
+
+**상황에 따른 스프링 빈 등록 방법**
+1. `컴포넌트 스캔` : 주로 정형화된 컨트롤러, 서비스, 리포지토리
+2. `설정을 통한 등록` : 정형화 되어 있지 않거나, 상황에 따라 구현 클래스 변경 가능성 존재
